Experiment: Replacing manual parsing with XML parsing (#96)
* Remove explicit need for security, can work this back in later if we need to

* Added JSoup + replaced title parsing

* Add implementation for ValueTag

* Add basics for iteration tag impl

* Further impl of iteration tag

* Added basic nesting for iteration tags

* Very early each impl

* Nested each

* Label nested templates

* Nested iteration with value as attribute

* Add each iteration object parsing

* Iteration finalize

* Start of conditional tag impl (unfinished)

* Very simple eq comparison for conditional tag

* Added else functionality to conditional wrapper

* Add else if condition tag parsing

* Add gt, lt, gte, lte and not comparison capabilities to conditional tag

* Refactor conditional tag

* Further conditional implementation (nested, literals, deeper objects)

* Handle simple each values in condition

* Conditional tag can deal with being nested in an iteration tag and using each values as a complex object

* ValueTag should also replace elseIf conditions

* Abstract Test + Click tag implementation

* Change tag impl

* On Enter tag implementation

* Class append tag implementation

* Generic M tag impl

* m-selected for select #93

* Cleanup code

* Fix core ui tests with XML expectations

* Minor integration test fixes

* Create medusa-ui.xsd

- provide autocompletion for m-tags and/with attributes
- basic validation

note: still WIP

* group medusa: allow any tag

* add link to schema

* Early JS work on conditionals, still more to do

* Fix conditionals integration test

* Nested each rewrite

* Remove unused methods in websocket.js (iteration related)

* Small improvements

* Test fixes

* Codacy fixes

* Added deeper object parsing for value interpretation within iterations

So if a span from-value is in an iteration, and the iteration is on a list of objects, it can get the value from withi